@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2007-2012 by Walter Brisken                             *
+ *   Copyright (C) 2007-2014 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -32,6 +32,7 @@
 #include "../difxmessage.h"
 
 #define DIFX_MESSAGE_FORMAT_LENGTH    320
+#define DIFX_MESSAGE_FILENAME_TAG_LENGTH	(DIFX_MESSAGE_FILENAME_LENGTH + 32)
 
 extern char difxMessageGroup[16];
 extern int difxMessagePort;
@@ -39,6 +40,7 @@ extern char difxMessageIdentifier[DIFX_MESSAGE_PARAM_LENGTH];
 extern char difxMessageHostname[DIFX_MESSAGE_PARAM_LENGTH];
 extern int difxMessageMpiProcessId;
 extern char difxMessageXMLFormat[DIFX_MESSAGE_FORMAT_LENGTH];
+extern char difxMessageInputFilenameTag[DIFX_MESSAGE_FILENAME_TAG_LENGTH];
 extern char difxMessageToXMLFormat[DIFX_MESSAGE_FORMAT_LENGTH];
 extern int difxMessageSequenceNumber;
 extern char difxBinarySTAGroup[16];
